# key-counter

./: .eslintrc-auto-import.json  .gitignore  README.md  dev-app-update.yml  electron-builder.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.vue  main.ts  vue-components.d.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: keyboard_listener.rs  lib.rs  main.rs
src/component/: Key.vue
src/layout/: default.vue
src/main/: index.ts
src/middleware/: tauri.ts
src/page/: index.vue
src/page/component/: Key.vue
src/preload/: index.d.ts  index.ts
src/renderer/src/: App.vue
